--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -105,26 +105,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">Canal VTV Plus Uruguay Online en VIVO y en directo</h1>
-<h2>Futbol Libre TV - VTV + Plus Uruguay</h2>
-</div>
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" class="embed-responsive-item" src="//bestformula.one/dtvpl2.html?id=1246" class="embed-responsive-item" name="iframe" id="iframe" scrolling="no" frameBorder="0" title="Reproductor en vivo de VTV Plus Uruguay" alt="Ver VTV Plus En vivo Online por Internet" allowfullscreen></iframe>
-</div>
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1246" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1246'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=VlRWX1BsdXNfSEQ" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=VlRWX1BsdXNfSEQ'">Opción 2</a>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
 </div>
 </div>
 </div>
+</div>
+
+
+</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <center><img align="text-center" src="https://futbollibretv.net/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
