--- a/en-vivo/deportv/index.html
+++ b/en-vivo/deportv/index.html
@@ -107,14 +107,16 @@ $("#navbar").load("../../html/navbar.html");
 <ul class="list-unstyled mt-3 mb-4">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0"scrolling="auto" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://play.tycsports.com" style="position: absolute;" width="100%"></iframe>')}
                         </script>
+
 </div>
 
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
 </div>
 </div>
 </div>
+  <br />
 <div class="sharethis-inline-share-buttons"></div>
 
 <br />
