--- a/en-vivo/espn-2/index.html
+++ b/en-vivo/espn-2/index.html
@@ -107,8 +107,9 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://play.tycsports.com" style="position: absolute;" width="100%"></iframe>')}
                         </script>
+
 </div>
 </div>
 </div>
@@ -117,7 +118,7 @@ $("#navbar").load("../../html/navbar.html");
 
 </div>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
-<div class="sharethis-inline-share-buttons"></div>
+<br /><div class="sharethis-inline-share-buttons"></div>
 <br/>
 <h3>Programación de ESPN 2</h3>
 <p align="left"><strong>ESPN 2</strong> es un canal deportivo creado en el año 2002 y que comenzó a emitirse en <strong>Argentina</strong>, Bolivia, Chile, Paraguay y Uruguay, después en Perú. Su programación es íntegramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes <strong>deportes</strong> de Argentina.</p>
