--- a/en-vivo/espn-3/index.html
+++ b/en-vivo/espn-3/index.html
@@ -108,8 +108,9 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://play.tycsports.com" style="position: absolute;" width="100%"></iframe>')}
                         </script>
+
 </div>
 </div>
 </div>
@@ -118,6 +119,7 @@ $("#navbar").load("../../html/navbar.html");
 
 </div>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
+<br />
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <p align="left"><strong>ESPN 3 en vivo</strong> es una señal multiplataforma de la cadena ESPN, que comenzó a emitir el 14 de noviembre de 2011 para toda América Latina. Está dedicado a un público más joven, su perfil es de hombres entre 16 y 24 años de edad, con nivel económico alto. <strong>ESPN3</strong> es el primer canal deportivo en <strong>Latinoamérica</strong> que tiene la disponibilidad de verse en forma simultánea en diferentes plataformas, es decir, tanto en televisión, celulares, computadores y tabletas digitales.</p>
