--- a/en-vivo/tv-publica/index.html
+++ b/en-vivo/tv-publica/index.html
@@ -101,8 +101,9 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
                         </script>
+
 </div>
 </div>
 </div>
@@ -111,6 +112,7 @@ $("#navbar").load("../../html/navbar.html");
 
 </div>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
+<br />
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <img src="https://futbollibretv.net/img/logo-canal/TV_Publica.png" alt="Logo del canal TV Pública" title="TV Pública en vivo"><br><br>
