--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -111,8 +111,9 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
                         </script>
+
 </div>
 </div>
 </div>
@@ -121,6 +122,7 @@ $("#navbar").load("../../html/navbar.html");
 
 </div>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
+<br />
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <center><img align="text-center" src="https://futbollibretv.net/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
