--- a/en-vivo/tyc-sports/ar/index.html
+++ b/en-vivo/tyc-sports/ar/index.html
@@ -101,8 +101,9 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://play.tycsports.com" style="position: absolute;" width="100%"></iframe>')}
                         </script>
+
 </div>
 </div>
 </div>
@@ -111,6 +112,7 @@ $("#navbar").load("../../html/navbar.html");
 
 </div>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
+<br />
 	
 <ul>
 	<li><a href="#item1">¿Qué es el canal de TyC Sports en vivo?</a></li>
