--- a/en-vivo/fox-sports-2/index.html
+++ b/en-vivo/fox-sports-2/index.html
@@ -41,7 +41,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="/css/bootstrap.css" rel="stylesheet">
 
 <link href="/css/portada.css" rel="stylesheet">
