--- a/en-vivo/espn-extra/index.html
+++ b/en-vivo/espn-extra/index.html
@@ -37,7 +37,7 @@
 <title>ESPN Extra en VIVO ONLINE en Directo por Internet - Fútbol Libre TV</title>
 
 <link href="../../css/bootstrap.css" rel="stylesheet">
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="../../css/portada.css" rel="stylesheet">
 <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script type="text/javascript">
