--- a/en-vivo/tv-publica/index.html
+++ b/en-vivo/tv-publica/index.html
@@ -35,7 +35,7 @@
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <title>TV Pública en VIVO ONLINE</title>
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="../../css/bootstrap.css" rel="stylesheet">
 
 <link href="../../css/portada.css" rel="stylesheet">
