--- a/en-vivo/deportv/index.html
+++ b/en-vivo/deportv/index.html
@@ -39,7 +39,7 @@
 <link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="../../css/bootstrap.css" rel="stylesheet">
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="../../css/portada.css" rel="stylesheet">
 <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script type="text/javascript">
