--- a/es/index.html
+++ b/es/index.html
@@ -118,7 +118,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-1/"><img src="../img/logo-canal/ESPN.webp" title="Ver ESPN 1 en VIVO y en directo" alt="Logo de ESPN 1" width="204"></a>
 	<ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 1</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 1</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -130,7 +130,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-2/"><img src="../img/logo-canal/ESPN_2.webp" title="Ver ESPN 2 en VIVO y en directo" alt="Logo de ESPN 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 2</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 2</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -142,7 +142,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox-Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 1</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 1</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -154,7 +154,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 2</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 2</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -166,7 +166,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 3</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 3</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -180,7 +180,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-3/"><img src="../img/logo-canal/ESPN_3.webp" title="Ver ESPN 3 en VIVO" alt="Logo de ESPN 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 3</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 3</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -192,7 +192,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN Extra</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN Extra</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-extra/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
