--- a/es/index.html
+++ b/es/index.html
@@ -92,7 +92,7 @@ Fútbol Libre TV
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <a href="/en-vivo/tyc-sports/"><img src="../img/logo-canal/TYC_Sports.webp?" title="Ver el canal TYC Sports en HD online en VIVO y en directo" alt="Logo de TYC Sports" width="204"></a>
-<li><strong>TYC Sports</strong>, canal argentino líder del deporte.<br /></li>
+<li> Ver <strong>TYC Sports</strong> en vivo, canal argentino líder del deporte.<br /></li>
 </ul>
 <a href="/en-vivo/tyc-sports/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver Canal</button></a>
 </div>
@@ -118,7 +118,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-1/"><img src="../img/logo-canal/ESPN.webp" title="Ver ESPN 1 en VIVO y en directo" alt="Logo de ESPN 1" width="204"></a>
 	<ul class="list-unstyled mt-3 mb-5">
-<li>Sigue toda la programación en HD del canal <strong>ESPN 1</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 1</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -130,7 +130,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-2/"><img src="../img/logo-canal/ESPN_2.webp" title="Ver ESPN 2 en VIVO y en directo" alt="Logo de ESPN 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Sigue toda la programación en HD del canal <strong>ESPN 2</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 2</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -180,7 +180,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-3/"><img src="../img/logo-canal/ESPN_3.webp" title="Ver ESPN 3 en VIVO" alt="Logo de ESPN 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Sigue toda la programación en HD del canal <strong>ESPN 3</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 3</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -192,7 +192,7 @@ Fútbol Libre TV
 <div class="card-body">
 <a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Sigue toda la programación en HD del canal <strong>ESPN Extra</strong><br /></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN Extra</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-extra/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -219,7 +219,7 @@ Fútbol Libre TV
 <div class="card-body">
 <br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.webp" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino<br /></li>
+<li>Ver <strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino<br /></li>
 </ul>
 <a href="/en-vivo/tv-publica/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -232,7 +232,7 @@ Fútbol Libre TV
 <div class="card-body">
 <br><a href="/en-vivo/deportv/"><img src="../img/logo-canal/DeporTV.png" title="Ver DeporTV en VIVO" alt="Logo de DeporTV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>DeporTV</strong>, canal público de deportes de Argentina.<br /></li>
+<li><strong>Ver DeporTV</strong> en vivo, canal público de deportes de Argentina.<br /></li>
 </ul>
 <a href="/en-vivo/deportv/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -249,7 +249,7 @@ Fútbol Libre TV
 <div class="card-body">
 <br><a href="/en-vivo/vtv-plus-uruguay/"><img src="../img/logo-canal/VTV_Plus_up.png" title="Ver VTV Plus en Vivo y en Directo" alt="Logo de VTV Plus TV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>VTV</strong>, canal deportivo Uruguayo<br /></li>
+<li>Ver <strong>VTV</strong> en vivo, canal deportivo Uruguayo<br /></li>
 </ul>
 <a href="/en-vivo/vtv-plus-uruguay/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
