--- a/es/index.html
+++ b/es/index.html
@@ -56,7 +56,7 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/es","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
@@ -75,7 +75,7 @@ Fútbol Libre TV
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
 <p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead">Ver <strong>Fútbol Libre</strong> para todos.</h2>
+<h2 class="lead">Ver <strong>Libre Fútbol </strong> para todos.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
