--- a/en-vivo/tudn/index.html
+++ b/en-vivo/tudn/index.html
@@ -38,7 +38,7 @@
 <title>TUDN en VIVO ONLINE en Directo por Internet - Fútbol Libre TV</title>
 
 <link href="../../css/bootstrap.css" rel="stylesheet">
-
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href="../../css/portada.css" rel="stylesheet">
 <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script type="text/javascript">
@@ -102,7 +102,7 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://www.youtube.com/embed/d_QE601XiY0?si=bof2npQoNGPrpSpy" style="position: absolute;" width="100%"></iframe>')}
                         </script>
 
 </div>
