--- a/en-vivo/deportv/index.html
+++ b/en-vivo/deportv/index.html
@@ -125,27 +125,12 @@ $("#navbar").load("../../html/navbar.html");
 <p align="left">DeporTV fue creado para el fomento del deporte argentino como promotor de valores de la sociedad. Transmitía las competencias profesionales de <strong>Fútbol para Todos</strong> y Automovilismo para todos. Actualmente transmite NBA y <strong>Carreras Argentinas</strong>, como así también programas referidos a otros <strong>deportes</strong> como hockey sobre césped, básquet, tenis, vóleibol, rugby, entre otros, y eventos como los Juegos Nacionales Evita. </p>
 <p align="left">La señal cubrió y transmitió los Juegos Olímpicos de Londres 2012, las eliminatorias y la Copa Mundial de Fútbol de 2014 y los Juegos Paralímpicos de Río de Janeiro 2016.</p>
 <br />
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
-</div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 </body>
