--- a/en-vivo/espn-extra/index.html
+++ b/en-vivo/espn-extra/index.html
@@ -124,27 +124,12 @@ $("#navbar").load("../../html/navbar.html");
 <p align="left">Del 9 al 12 de marzo de 2020, el canal tomó brevemente el nombre de <strong>ESPN Extra</strong>, y a partir del 1 de mayo del mismo año, cambió oficialmente a su nombre actual.</p>
 <p align="center"><img src="https://futbollibretv.net/img/logo-canal/ESPN_Extra.png" alt="Logo del canal ESPN Extra" title="ESPN Extra en vivo"></p>
 <br />
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
-</div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 </body>
