--- a/en-vivo/fox-sports-1/index.html
+++ b/en-vivo/fox-sports-1/index.html
@@ -128,29 +128,13 @@ $("#navbar").load("../../html/navbar.html");
 </p>
 <p align="left">Comenzó en 1995 como un bloque deportivo en el canal<strong> Fox Broadcasting Company</strong> de Latinoamérica donde ofrecía los mejores partidos de la <strong>NFL</strong>, duró hasta 1996 cuando <strong>Fox Latin American Channels</strong> compró el canal deportivo <strong>Prime Deportiva</strong> para cambiar de nombre a<strong> Fox Sports Américas</strong> y luego a <strong>Fox Sports.</strong></p>
 <a href="https://mi.tv/co/canales/fox-sports-hd">Programacion completa de Fox Sports 1</a>
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
-</div>
-
 
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 ></body>
