--- a/en-vivo/fox-sports-2/index.html
+++ b/en-vivo/fox-sports-2/index.html
@@ -125,27 +125,12 @@ $("#navbar").load("../../html/navbar.html");
 <p align="left">
 <strong>Fox Sports 2</strong> es un canal de cable y satélite totalmente deportivo, es la segunda señal de<b> Fox Sports</b>, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la <a href="../copa-libertadores/"><b>Copa Libertadores</b>,</a> <b>UEFA Champions League</b>,<b> <a href="../copa-sudamericana/">Copa Sudamericana</a></b>, <b>UEFA Europa League</b>, la <a href="https://es.wikipedia.org/wiki/WWE"><b>WWE </b></a>entre otros.
 </p>
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
-</div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
 
 
