--- a/en-vivo/tudn/index.html
+++ b/en-vivo/tudn/index.html
@@ -120,27 +120,12 @@ $("#navbar").load("../../html/navbar.html");
 <img src="https://futbollibretv.net/img/logo-canal/TUDN.webp" alt="Logo del canal TUDN" title="TUDN en vivo"><br>
 <p align="left"><strong>TUDN</strong> es un canal deportivo de televisión por suscripción mexicano-estadounidense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962.</p>
 <br />
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
-</div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 </body>
