--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -174,31 +174,13 @@ $("#navbar").load("../../html/navbar.html");
 	
 	
 	
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+$("#footer").load("../../html/footer.html");
+});
+</script>
 </div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
-<br />
-
-                              </script>
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
-</div>
-
 
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 <script>
