--- a/es/index.html
+++ b/es/index.html
@@ -79,10 +79,10 @@ Fútbol Libre TV
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="600"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="420"></iframe>
 </div>
-<br>
-	<center><h3>Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</h3></center>
+<br />
+	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
 
 	
 <div id="protag-in_article_video"></div>
@@ -94,7 +94,7 @@ Fútbol Libre TV
     });
 </script>
 			  
-<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estdeportes.telam.com.ar/html/v3/index.html?channel=deportes.futbol.copaargentina&lang=es_LA' width='100%'></iframe>
+<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estdeportes.telam.com.ar/html/v3/index.html?channel=deportes.futbol.copalpf&lang=es_LA' width='100%'></iframe>
 <br />
 <p class="display-5 text-center">Ver Canales de futbol online en vivo y en directo</p>
 <br />
