--- a/es/index.html
+++ b/es/index.html
@@ -308,7 +308,9 @@ Fútbol Libre TV
 <p>Futbol Libre TV se especializa en la transmisión de partidos en vivo y en directo. Sin embargo, algunos canales pueden ofrecer repeticiones de los encuentros después de su finalización. Te recomendamos consultar la programación de los canales para verificar si alguna repetición está disponible.</p>
 
 <p>Futbol Libre TV es una excelente opción para todos los amantes del fútbol  que desean ver los partidos en vivo y en directo sin perderse ningún detalle. Con una amplia selección de canales gratuitos, podrás disfrutar de los encuentros más emocionantes del fútbol argentino, la Copa Libertadores, la Copa Sudamericana y la Champions League. Ya sea desde tu computadora o desde tu celular, Futbol Libre TV te brinda la posibilidad de seguir de cerca a tus equipos favoritos y vivir la pasión del fútbol desde la comodidad de tu hogar. No te pierdas ningún partido importante y únete a la comunidad de aficionados que disfrutan de Futbol Libre TV. ¡Ingresa a <a href="https://futbollibretv.net/">futbollibretv.net</a> y comienza a vivir la emoción del fútbol en vivo y en directo!</p>
-	
+	<br />
+<p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
+    </p>
 <!--p align="left"><h2>Preguntas frecuentes</h2></p><br />
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
