--- a/embed/eventos/index.html
+++ b/embed/eventos/index.html
@@ -26,6 +26,8 @@
 <link href="/css/bootstrap.css" rel="stylesheet">
 <link href="/css/portada.css" rel="stylesheet">
 <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+         
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <meta http-Equiv="Cache-Control" Content="no-cache" />
 <meta http-Equiv="Pragma" Content="no-cache" />
 <meta http-Equiv="Expires" Content="0" />
@@ -54,15 +56,12 @@
 <title>Reproductor - Fútbol Libre TV</title>
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://futbollibretv.net">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://futbollibretv.net">
-<img src="https://futbollibretv.net/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<div id="navbar"></div>
+<script>
+$(document).ready(function() {
+$("#navbar").load("../../html/navbar.html");
+});
+</script>
 <div class="container">
 <div class="jumbotron">
 <div class="row">
