--- a/en-vivo/fox-sports-3/index.html
+++ b/en-vivo/fox-sports-3/index.html
@@ -124,7 +124,7 @@ $("#navbar").load("../../html/navbar.html");
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <br />
-<img src="//https://futbollibretv.net/img/Fox-Sports-3.png" alt="Logo del canal Fox Sports 3" title="Fox Sports 3 en vivo" width="%50" height="140" /><br><br>
+<img src="https://futbollibretv.net/img/Fox-Sports-3.png" alt="Logo del canal Fox Sports 3" title="Fox Sports 3 en vivo" width="%50" height="140" /><br><br>
 <p align="left">
 <strong>Fox Sports 3 </strong>es un canal deportivo de
 <stron>
