--- a/es/index.html
+++ b/es/index.html
@@ -7,7 +7,22 @@
 <link rel="canonical" href="https://futbollibretv.net/es/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
-	
+	<script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.googletag.cmd.push(function () {
+        window.googletag.pubads().enableSingleRequest();
+    });
+</script>
+
+<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
+<script type="text/javascript">
+    window.protag = window.protag || { cmd: [] };
+    window.protag.config = { s:'futbollibretv.net', childADM: '22187115763', l: 'Arf30PQf' };
+    window.protag.cmd.push(function () {
+        window.protag.pageInit();
+    });
+</script>
 <meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
