--- a/embed/eventos/index.html
+++ b/embed/eventos/index.html
@@ -26,7 +26,22 @@
 <link href="/css/bootstrap.css" rel="stylesheet">
 <link href="/css/portada.css" rel="stylesheet">
 <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-         
+         <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.googletag.cmd.push(function () {
+        window.googletag.pubads().enableSingleRequest();
+    });
+</script>
+
+<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
+<script type="text/javascript">
+    window.protag = window.protag || { cmd: [] };
+    window.protag.config = { s:'futbollibretv.net', childADM: '22187115763', l: 'Arf30PQf' };
+    window.protag.cmd.push(function () {
+        window.protag.pageInit();
+    });
+</script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <meta http-Equiv="Cache-Control" Content="no-cache" />
 <meta http-Equiv="Pragma" Content="no-cache" />
