--- a/es/index.html
+++ b/es/index.html
@@ -89,6 +89,14 @@ Fútbol Libre TV
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
+	  <div id="protag-header"></div>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.protag = window.protag || { cmd: [] };
+    window.protag.cmd.push(function () {
+        window.protag.display("protag-header");
+    });
+</script>
 <p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
 <h2 class="lead">Ver <strong>Libre Fútbol </strong> para todos.</h2>
 </div>
