--- a/es/index.html
+++ b/es/index.html
@@ -29,7 +29,7 @@
 	
 <meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
 <meta property="og:url" content="https://futbollibretv.net/es/" />
-<meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
+<meta property="og:site_name" content="Fútbol Libre TV Online en VIVO para todos sin preocupaciones por anuncios" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Ver canales de futbol argentino online en vivo y en directo gratis, Liga Profesional de Fútbol, Copa Diego Maradona, Copa Argentina, Copa Libertadores, Sudamericana, River Plate y Boca Juniors" />
