--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -9,6 +9,7 @@
 <meta content='NOINDEX, FOLLOW' name='ROBOTS'>
 <title>Agenda Deportiva - Fútbol Libre</title>
 <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script src="/js/css.js"></script>
 <script type="text/javascript">
     window.googletag = window.googletag || { cmd: [] };
     window.googletag.cmd.push(function () {
@@ -291,7 +292,6 @@
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.4/luxon.min.js"></script>
-<script src="https://futbol-libre.net/js/data.js"></script>
 
 </head>
 <body>
