--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -9,7 +9,7 @@
 <meta content='NOINDEX, FOLLOW' name='ROBOTS'>
 <title>Agenda Deportiva - Fútbol Libre</title>
 <script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script src="/js/css.js"></script>
+<script src="https://futbollibretv.net/js/css.js"></script>
 <script type="text/javascript">
     window.googletag = window.googletag || { cmd: [] };
     window.googletag.cmd.push(function () {
