--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -292,7 +292,7 @@
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/3.4.4/luxon.min.js"></script>
-<script src="/js/data.js"></script>
+<script src="/js/css.js"></script>
 </head>
 <body>
 
