--- a/es/index.html
+++ b/es/index.html
@@ -102,7 +102,7 @@ Fútbol Libre TV
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="420"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/deportiva.html" frameborder="0" width="100%" height="420"></iframe>
 </div>
 <br />
 	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
