--- a/es/index.html
+++ b/es/index.html
@@ -54,7 +54,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<title>Fútbol Libre TV - Ver partidos de fútbol y canales TNT Sports Premium, Fox Sports y ESPN online en VIVO y en DIRECTO</title>
+<title>Fútbol Libre TV - Ver partidos de fútbol y canales EN VIVO,  Futbol para todos online en VIVO y en DIRECTO</title>
 
 
 
