--- a/es/index.html
+++ b/es/index.html
@@ -8,17 +8,17 @@
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
-<meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
+<meta name="description" content="Ver fútbol libre de preocupaciones por anuncios a través de esta web. Sigue el minuto a minuto de los partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y la Liga 1, entre otros."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
 	
-<meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
+<meta property="og:title" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones"/><meta property="og:description" content="Ver fútbol libre de preocupaciones por anuncios a través de esta web. Sigue el minuto a minuto de los partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y la Liga 1, entre otros."/>
 <meta property="og:url" content="https://futbollibretv.net/es/" />
-<meta property="og:site_name" content="Fútbol Libre TV Online en VIVO para todos sin preocupaciones por anuncios" />
+<meta property="og:site_name" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Ver canales de futbol argentino online en vivo y en directo gratis, Liga Profesional de Fútbol, Copa Diego Maradona, Copa Argentina, Copa Libertadores, Sudamericana, River Plate y Boca Juniors" />
-<meta name="twitter:title" content="Fútbol Libre TV - Partidos y canales online en vivo y en directo" />
+<meta name="twitter:title" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones 2024" />
 <meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<title>Fútbol Libre TV - Ver partidos de fútbol y canales EN VIVO,  Futbol para todos online en VIVO y en DIRECTO</title>
+<title>Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos de Boca y River, tabla de posiciones 2024</title>
 
 
 
@@ -90,7 +90,7 @@ Fútbol Libre TV
 <iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/deportiva.html" frameborder="0" width="100%" height="420"></iframe>
 </div>
 <br />
-	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
+	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones 2024</p>
 
 	
 <div id="protag-in_article_video"></div>
@@ -294,7 +294,7 @@ Fútbol Libre TV
 	<br />
 
 <h1 id="futbollibre">Futbol Libre TV</h1>
-<p id="verfutbollibretvonlineenvivoyendirectocanalesgratisdestreamparaverpartidosdelfutbolargentinocopalibertadorescopasudamericanaychampionsleagueentreotros">Ver futbol libre TV online en vivo y en directo: Canales gratis de stream para ver partidos del futbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros</p>
+<p id="futbollibre">Fútbol Libre te permite descubrir todo sobre la Liga Profesional de Fútbol: calendarios, próximos partidos de Boca y River que serán transmitidos a través de los canales ESPN Premium y TNT Sports, tabla de posiciones, entre otros.</p>
 <p><img src="https://images.unsplash.com/opengraph/1x1.png?auto=format&fit=crop&w=1200&h=630&q=60&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1521731978332-9e9e714bdd20%3Fcrop%3Dfaces%252Cedges%26cs%3Dtinysrgb%26fit%3Dcrop%26fm%3Djpg%26ixid%3DM3wxMjA3fDB8MXxzZWFyY2h8NHx8ZnV0Ym9sfGVufDB8fHx8MTY4OTgzOTEyMXww%26ixlib%3Drb-4.0.3%26q%3D60%26w%3D1200%26auto%3Dformat%26h%3D630%26mark-w%3D750%26mark-align%3Dmiddle%252Ccenter%26blend-mode%3Dnormal%26blend-alpha%3D10%26mark%3Dhttps%253A%252F%252Fimages.unsplash.com%252Fopengraph%252Fsearch-input.png%253Fauto%253Dformat%2526fit%253Dcrop%2526w%253D750%2526h%253D84%2526q%253D60%2526txt-color%253D000000%2526txt-size%253D40%2526txt-align%253Dmiddle%25252Cleft%2526txt-pad%253D80%2526txt-width%253D660%2526txt-clip%253Dellipsis%2526txt%253Dfutbol%26blend%3D000000" style="display:none; max-width: 100% !important;"/>
 <h2 id="quesfutbollibretv">¿Qué es Futbol Libre ?</h2>
 <p><a href="https://futbollibretv.net/">Futbol Libre</a> es una plataforma en línea que ofrece canales gratuitos para ver partidos de fútbol en vivo y en directo. Con una amplia selección de canales, los aficionados al fútbol argentino y a los torneos internacionales como la Copa Libertadores, la Copa Sudamericana y la Champions League pueden disfrutar de los encuentros más emocionantes desde la comodidad de sus hogares. Además de los partidos de Boca Juniors y River Plate, también se transmiten los encuentros de la Selección Argentina y muchos otros eventos futbolísticos.</p>
