--- a/es/index.html
+++ b/es/index.html
@@ -11,7 +11,13 @@
 <meta name="description" content="Ver fútbol libre de preocupaciones por anuncios a través de esta web. Sigue el minuto a minuto de los partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y la Liga 1, entre otros."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
-	
+	<meta name="keywords" content="Fútbol Libre en vivo, Libre fútbol, Ver fútbol argentino en directo, Partidos de Boca Juniors en vivo, Partidos de River Plate en vivo, Copa Libertadores en vivo, Copa Sudamericana en vivo">
+
+
+
+
+
+
 <meta property="og:title" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones"/><meta property="og:description" content="Ver fútbol libre de preocupaciones por anuncios a través de esta web. Sigue el minuto a minuto de los partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y la Liga 1, entre otros."/>
 <meta property="og:url" content="https://futbollibretv.net/es/" />
 <meta property="og:site_name" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones" />
@@ -296,26 +302,19 @@ Fútbol Libre TV
 <h1 id="futbollibre">Futbol Libre TV</h1>
 <p id="futbollibre">Fútbol Libre te permite descubrir todo sobre la Liga Profesional de Fútbol: calendarios, próximos partidos de Boca y River que serán transmitidos a través de los canales ESPN Premium y TNT Sports, tabla de posiciones, entre otros.</p>
 <p><img src="https://images.unsplash.com/opengraph/1x1.png?auto=format&fit=crop&w=1200&h=630&q=60&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1521731978332-9e9e714bdd20%3Fcrop%3Dfaces%252Cedges%26cs%3Dtinysrgb%26fit%3Dcrop%26fm%3Djpg%26ixid%3DM3wxMjA3fDB8MXxzZWFyY2h8NHx8ZnV0Ym9sfGVufDB8fHx8MTY4OTgzOTEyMXww%26ixlib%3Drb-4.0.3%26q%3D60%26w%3D1200%26auto%3Dformat%26h%3D630%26mark-w%3D750%26mark-align%3Dmiddle%252Ccenter%26blend-mode%3Dnormal%26blend-alpha%3D10%26mark%3Dhttps%253A%252F%252Fimages.unsplash.com%252Fopengraph%252Fsearch-input.png%253Fauto%253Dformat%2526fit%253Dcrop%2526w%253D750%2526h%253D84%2526q%253D60%2526txt-color%253D000000%2526txt-size%253D40%2526txt-align%253Dmiddle%25252Cleft%2526txt-pad%253D80%2526txt-width%253D660%2526txt-clip%253Dellipsis%2526txt%253Dfutbol%26blend%3D000000" style="display:none; max-width: 100% !important;"/>
-<h2 id="quesfutbollibretv">¿Qué es Futbol Libre ?</h2>
-<p><a href="https://futbollibretv.net/">Futbol Libre</a> es una plataforma en línea que ofrece canales gratuitos para ver partidos de fútbol en vivo y en directo. Con una amplia selección de canales, los aficionados al fútbol argentino y a los torneos internacionales como la Copa Libertadores, la Copa Sudamericana y la Champions League pueden disfrutar de los encuentros más emocionantes desde la comodidad de sus hogares. Además de los partidos de Boca Juniors y River Plate, también se transmiten los encuentros de la Selección Argentina y muchos otros eventos futbolísticos.</p>
-<h2 id="cmoverunpartidoporfutbollibretvenvivoyendirecto">¿Cómo ver un partido por Futbol Libre TV en vivo y en directo?</h2>
-<p>Para ver un partido en vivo y en directo a través de Futbol Libre TV, simplemente debes ingresar a su página web <a href="https://futbollibretv.net/">futbollibretv.net</a> y seleccionar el partido que deseas ver. Puedes encontrar los partidos en la agenda diaria o buscar el canal que transmitirá el encuentro en el momento del inicio. Una vez que hayas seleccionado el partido, podrás disfrutar de la transmisión en vivo sin interrupciones.</p>
-<h2 id="cmoverfutbollibretvenvivodesdelacomputadoraodesdeelcelular">¿Cómo ver Futbol Libre TV en vivo desde la computadora o desde el celular?</h2>
-<p>Ver Futbol Libre TV en vivo desde la computadora o desde el celular es muy sencillo. Si deseas disfrutar de los partidos desde tu computadora o PC, simplemente debes ingresar a <a href="https://futbollibretv.net/">futbollibretv.net</a> desde tu navegador y elegir el canal que deseas ver en directo. Por otro lado, si prefieres ver los partidos desde tu celular, puedes acceder a la página de Futbol Libre TV desde tu dispositivo Android o iPhone iOS y seleccionar el canal de tu preferencia. Esto te permitirá disfrutar de los partidos en cualquier momento y lugar.</p>
-<h2 id="qupartidosdeftboltransmitefutbollibre">¿Qué partidos de fútbol transmite Futbol Libre?</h2>
-<p>Futbol Libre TV ofrece una amplia variedad de partidos de fútbol que incluyen los encuentros del fútbol argentino, como los partidos de Boca Juniors y River Plate por el campeonato argentino. Además, se transmiten los partidos de la Copa Libertadores y la Copa Sudamericana, dos de los torneos más prestigiosos a nivel de clubes en Sudamérica. Esta plataforma también te brinda la posibilidad de disfrutar de los emocionantes encuentros de la Champions League, uno de los torneos más importantes a nivel de clubes en Europa. Con Futbol Libre TV, no te perderás ningún partido importante y podrás seguir de cerca a tus equipos favoritos.</p>
-<h2 id="preguntasfrecuentes">Preguntas frecuentes</h2>
-<p>A continuación, responderemos algunas preguntas frecuentes que los usuarios suelen tener sobre Futbol Libre TV.</p>
-<h3 id="culeslapginaweboficialdefutbollibretv">¿Cuál es la página web oficial de Futbol Libre TV?</h3>
-<p>La página web oficial de Futbol Libre TV es <a href="https://futbollibretv.net/">futbollibretv.net</a>. Desde esta plataforma, podrás acceder a todos los canales gratuitos en vivo y en directo para ver los partidos de fútbol que desees.</p>
-<h3 id="cuntocuestautilizarfutbollibretv">¿Cuánto cuesta utilizar Futbol Libre TV?</h3>
-<p>Futbol Libre TV es completamente gratuito. No es necesario realizar ningún pago para acceder a los canales y disfrutar de los partidos de fútbol en vivo.</p>
-<h3 id="qudispositivossoncompatiblesconfutbollibretv">¿Qué dispositivos son compatibles con Futbol Libre TV?</h3>
-<p>Futbol Libre TV es compatible con diferentes dispositivos. Puedes acceder a la plataforma desde tu computadora o PC, así como desde tu teléfono celular o tablet. Simplemente necesitas tener acceso a internet y podrás disfrutar de los partidos desde cualquier lugar.</p>
-<h3 id="puedoverlospartidosendiferido">¿Puedo ver los partidos en diferido?</h3>
-<p>Futbol Libre TV se especializa en la transmisión de partidos en vivo y en directo. Sin embargo, algunos canales pueden ofrecer repeticiones de los encuentros después de su finalización. Te recomendamos consultar la programación de los canales para verificar si alguna repetición está disponible.</p>
+<p>Disponible para usuarios en Argentina, Perú, Colombia, Ecuador y México, esta plataforma ofrece una amplia gama de eventos futbolísticos sin costo alguno. A continuación, responderemos algunas preguntas frecuentes sobre Fútbol Libre TV, proporcionando una guía clara y sencilla para disfrutar de tu deporte favorito.</p>
 
-<p>Futbol Libre TV es una excelente opción para todos los amantes del fútbol  que desean ver los partidos en vivo y en directo sin perderse ningún detalle. Con una amplia selección de canales gratuitos, podrás disfrutar de los encuentros más emocionantes del fútbol argentino, la Copa Libertadores, la Copa Sudamericana y la Champions League. Ya sea desde tu computadora o desde tu celular, Futbol Libre TV te brinda la posibilidad de seguir de cerca a tus equipos favoritos y vivir la pasión del fútbol desde la comodidad de tu hogar. No te pierdas ningún partido importante y únete a la comunidad de aficionados que disfrutan de Futbol Libre TV. ¡Ingresa a <a href="https://futbollibretv.net/">futbollibretv.net</a> y comienza a vivir la emoción del fútbol en vivo y en directo!</p>
+<h4>¿Qué es Fútbol Libre TV?</h4><p>Fútbol Libre TV es una plataforma en línea que transmite en vivo y en directo todos los partidos del fútbol argentino. Además, podrás ver competiciones internacionales como la Copa Sudamericana y la Copa Libertadores. Los aficionados de equipos icónicos como Boca Juniors y River Plate, así como de la Selección Argentina, encontrarán en Fútbol Libre TV una opción ideal para seguir a sus equipos favoritos sin interrupciones y completamente gratis.</p><h4>¿Cómo ver un partido por Fútbol Libre TV en vivo y en directo?</h4>
+
+<p>Para ver Fútbol Libre TV online en vivo y en directo, sigue estos pasos sencillos:</p><ol><li>Ingresa a la página web de Fútbol Libre TV.</li><li>Navega a la sección de la agenda diaria para ver qué partidos están programados.</li><li>Selecciona el partido que deseas ver. Alternativamente, puedes elegir el canal que transmitirá el partido en el horario del encuentro.</li></ol><h4>¿Cómo ver Fútbol Libre TV en vivo desde la computadora o el celular?</h4>
+
+<p>Ver Fútbol Libre TV desde tu computadora o celular es muy sencillo. Solo necesitas seguir estos pasos:</p><ol><li>Desde tu computadora, abre tu navegador y visita <a href="http://futbollibretv.net/es" rel="noreferrer" target="_new">futbollibretv.net</a>.</li><li>Si usas un dispositivo móvil, ingresa a la misma dirección desde tu navegador en Android o iOS.</li><li>Una vez en el sitio, selecciona el canal o partido que deseas ver en directo.</li></ol>
+
+<h4>¿Qué partidos de fútbol transmite Fútbol Libre?</h4><p>En Fútbol Libre podrás ver una variedad de partidos, incluyendo:</p><ul><li>Todos los encuentros del fútbol argentino.</li><li>Partidos de Boca Juniors y River Plate.</li><li>Competiciones internacionales como la Copa Libertadores,la Copa Sudamericana y la Copa américa.</li><li>Partidos de la Selección Argentina.</li></ul>
+
+
+
+<h3>Conclusión</h3><p>Fútbol Libre TV se presenta como la mejor opción para ver partidos de fútbol en vivo y en directo, especialmente para los fanáticos del fútbol argentino y de las competiciones sudamericanas. Su accesibilidad y variedad de transmisiones hacen que sea una herramienta indispensable para cualquier aficionado del deporte rey. No importa si estás en Argentina, Perú, Colombia, Ecuador o México, Fútbol Libre TV te permite disfrutar del mejor fútbol sin costo alguno y desde la comodidad de tu hogar o cualquier lugar donde te encuentres.</p>
 	<br />
 <p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
     </p>
