--- a/tv/index.html
+++ b/tv/index.html
@@ -9,7 +9,7 @@
 <meta name="referrer" content="always">
 	
 <meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
-<meta property="og:locale" content="es_AR" />
+<meta property="og:locale" content="es_MX" />
 <meta property="og:type" content="website" />
 	
 <meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
